--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <scope>test</scope>
         </dependency>
 
+<!--        &lt;!&ndash; Authentication &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>-->
+<!--        </dependency>-->
+
     </dependencies>
 
     <build>
